export const snapshot = {};

snapshot[`Sitemap plugin 1`] = `
{
  formats: [
    {
      engines: 0,
      ext: ".page.toml",
      isPage: true,
      loader: [AsyncFunction: toml],
    },
    {
      engines: 1,
      ext: ".page.ts",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".page.js",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      engines: 0,
      ext: ".page.json",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".vto",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
  ],
  src: [
    "/",
    "/404.md",
    "/_data.yml",
    "/favicon.png",
    "/images",
    "/images/avatar.jpg",
    "/page5.yaml",
    "/pages",
    "/pages/2020-06-21_page2.page.json",
    "/pages/2021-01-02-18-32_page4.page.ts",
    "/pages/_data",
    "/pages/_data.yml",
    "/pages/_data/colors.yml",
    "/pages/_data/documents.ts",
    "/pages/_data/drinks.js",
    "/pages/_data/names.json",
    "/pages/ghost",
    "/pages/ghost/2021-12-29-page6.md",
    "/pages/ghost/_data.yml",
    "/pages/page1.md",
    "/pages/page3.page.js",
    "/pages/subpage",
    "/pages/subpage/_data.yml",
    "/pages/subpage/page7.page.js",
    "/static.yml",
    "/styles.css",
  ],
}
`;

snapshot[`Sitemap plugin 2`] = `[]`;

snapshot[`Sitemap plugin 3`] = `
[
  {
    content: "<p>This page is exported to <code>/404.html</code>, not <code>/404/index.html</code></p>
",
    data: {
      basename: "404",
      children: "<p>This page is exported to <code>/404.html</code>, not <code>/404/index.html</code></p>
",
      content: "This page is exported to \`/404.html\`, not \`/404/index.html\`
",
      date: [],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Default site name",
      tags: "Array(0)",
      url: "/404.html",
    },
    src: {
      ext: ".md",
      path: "/404",
      remote: undefined,
    },
  },
  {
    content: "Content of Page 2",
    data: {
      basename: "overrided-page2",
      children: "Content of Page 2",
      colors: "Array(3)",
      content: "Content of Page 2",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
        "image",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Folder overrided site name",
      tags: "Array(1)",
      title: "Page 2",
      url: "/overrided-page2/",
    },
    src: {
      ext: ".page.json",
      path: "/pages/2020-06-21_page2",
      remote: undefined,
    },
  },
  {
    content: "Content of Page 3",
    data: {
      basename: "page_3",
      children: "Content of Page 3",
      colors: "Array(3)",
      content: "Content of Page 3",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Folder overrided site name",
      tags: "Array(1)",
      title: "Page 3",
      url: "/page_3/",
    },
    src: {
      ext: ".page.js",
      path: "/pages/page3",
      remote: undefined,
    },
  },
  {
    content: "Content of Page 5",
    data: {
      basename: "page5",
      children: "Content of Page 5",
      content: "Content of Page 5",
      date: [],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Default site name",
      tags: "Array(0)",
      title: "Page 5",
      url: "/page5/",
    },
    src: {
      ext: ".yaml",
      path: "/page5",
      remote: undefined,
    },
  },
  {
    content: "Content of Page 4 in Overrided site name, from the file /pages/2021-01-02-18-32_page4.page.ts",
    data: {
      basename: "2021-01-02-18-32_page4",
      children: "Content of Page 4 in Overrided site name, from the file /pages/2021-01-02-18-32_page4.page.ts",
      colors: "Array(3)",
      content: "default",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Overrided site name",
      tags: "Array(1)",
      title: "Page 4",
      url: "/pages/2021-01-02-18-32_page4/",
    },
    src: {
      ext: ".page.ts",
      path: "/pages/2021-01-02-18-32_page4",
      remote: undefined,
    },
  },
  {
    content: "<p>Content of Page 6</p>
",
    data: {
      basename: "2021-12-29-page6",
      children: "<p>Content of Page 6</p>
",
      colors: "Array(3)",
      content: "Content of Page 6
",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Folder overrided site name",
      tags: "Array(2)",
      title: "Page 6",
      url: "/pages/2021-12-29-page6/",
    },
    src: {
      ext: ".md",
      path: "/pages/ghost/2021-12-29-page6",
      remote: undefined,
    },
  },
  {
    content: "Content of Page 7",
    data: {
      basename: "page7",
      children: "Content of Page 7",
      colors: "Array(3)",
      content: "Content of Page 7",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Folder overrided site name",
      tags: "Array(3)",
      url: "/pages/new-name/page7/",
    },
    src: {
      ext: ".page.js",
      path: "/pages/subpage/page7",
      remote: undefined,
    },
  },
  {
    content: "User-agent: *
Allow: /

Sitemap: https://example.com/sitemap.xml",
    data: {
      basename: "robots",
      page: [
        "src",
        "data",
      ],
      url: "/robots.txt",
    },
    src: {
      ext: "",
      path: "",
      remote: undefined,
    },
  },
  {
    content: '<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:xhtml="http://www.w3.org/1999/xhtml">
  <url>
    <loc>https://example.com/overrided-page2/</loc>
    <lastmod>2024-08-06T19:00:04.255Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/page5/</loc>
    <lastmod>1979-06-21T23:45:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/page_3/</loc>
    <lastmod>2020-01-01T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/2021-01-02-18-32_page4/</loc>
    <lastmod>2024-08-06T19:00:04.256Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/2021-12-29-page6/</loc>
    <lastmod>2022-01-01T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/new-name/page7/</loc>
    <lastmod>2022-01-02T00:00:00.000Z</lastmod>
  </url>
</urlset>',
    data: {
      basename: "sitemap",
      content: '<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:xhtml="http://www.w3.org/1999/xhtml">
  <url>
    <loc>https://example.com/overrided-page2/</loc>
    <lastmod>2024-08-06T19:00:04.255Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/page5/</loc>
    <lastmod>1979-06-21T23:45:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/page_3/</loc>
    <lastmod>2020-01-01T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/2021-01-02-18-32_page4/</loc>
    <lastmod>2024-08-06T19:00:04.256Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/2021-12-29-page6/</loc>
    <lastmod>2022-01-01T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/new-name/page7/</loc>
    <lastmod>2022-01-02T00:00:00.000Z</lastmod>
  </url>
</urlset>',
      page: [
        "src",
        "data",
      ],
      url: "/sitemap.xml",
    },
    src: {
      ext: "",
      path: "",
      remote: undefined,
    },
  },
]
`;

snapshot[`Sitemap plugin with a multilanguage plugin 1`] = `
{
  formats: [
    {
      engines: 0,
      ext: ".page.toml",
      isPage: true,
      loader: [AsyncFunction: toml],
    },
    {
      engines: 1,
      ext: ".page.ts",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".page.js",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      engines: 0,
      ext: ".page.json",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".vto",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      ext: ".html",
    },
  ],
  src: [
    "/",
    "/_data.json",
    "/_includes",
    "/_includes/layout.vto",
    "/index.md",
    "/lang-selector.md",
    "/other.vto",
    "/pages",
    "/pages/page1.md",
    "/pages/page1_en.md",
    "/pages/page1_gl.md",
    "/pagination.page.js",
    "/types",
    "/types/article.md",
    "/types/article_gl.md",
    "/types/post.md",
    "/types/post_gl.md",
  ],
}
`;

snapshot[`Sitemap plugin with a multilanguage plugin 2`] = `[]`;

snapshot[`Sitemap plugin with a multilanguage plugin 3`] = `
[
  {
    content: '<!DOCTYPE html>
<html lang="en"><head><link rel="alternate" hreflang="en" href="https://example.com/en/">
<link rel="alternate" hreflang="gl" href="https://example.com/">
</head><body><p>Hello world</p>
</body></html>',
    data: {
      alternates: "Array(2)",
      basename: "",
      children: "<p>Hello world</p>
",
      content: "Hello world
",
      date: [],
      id: "index",
      lang: "en",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "Hello world",
      unmatchedLangUrl: "undefined",
      url: "/en/",
    },
    src: {
      ext: ".md",
      path: "/index",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="en"><head><link rel="alternate" hreflang="en" href="https://example.com/en/other-page-english/">
<link rel="alternate" hreflang="fr" href="https://example.com/fr/other-page-french.html">
<link rel="alternate" hreflang="x-default" href="https://example.com/en/other-page-english/">
</head><body><h1>English subtitle</h1>
<p>Common description</p>
<p>Other page <a href="/">Link to index in Galego</a></p>
</body></html>',
    data: {
      alternates: "Array(2)",
      basename: "other",
      children: '<h1>English subtitle</h1>
<p>Common description</p>
<p>Other page <a href="/">Link to index in Galego</a></p>
',
      content: \`<h1>{{ metas.subtitle }}</h1>
<p>{{ metas.description }}</p>
<p>Other page <a href="{{ '~/index.md(lang=gl)' |> url }}">Link to index in Galego</a></p>
\`,
      date: [],
      id: "other",
      lang: "en",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      metas: [
        "subtitle",
        "description",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "Other",
      unmatchedLangUrl: "/en/other-page-english/",
      url: "/en/other-page-english/",
    },
    src: {
      ext: ".vto",
      path: "/other",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="en"><head><link rel="alternate" hreflang="en" href="https://example.com/en/page-1/">
<link rel="alternate" hreflang="gl" href="https://example.com/page-1/">
<link rel="alternate" hreflang="x-default" href="https://example.com/en/page-1/">
</head><body><nav>
  <a href="/en/page-1/" hreflang="en" class="alternate"></a>
  <a href="/page-1/" hreflang="gl" class="alternate"></a>
  <a href="/en/page-1/" hreflang="x-default" class="alternate">Unmatched Language Page</a>
</nav>
  <li>Hello world</li>
  <li>Other</li>
  <li>page-en</li>
  <li>post 1</li>
</body></html>',
    data: {
      alternates: "Array(2)",
      basename: "page-1",
      children: "undefined",
      content: "undefined",
      date: [],
      id: "page-1",
      lang: "en",
      layout: "layout.vto",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      pagination: [
        "page",
        "totalPages",
        "totalResults",
        "previous",
        "next",
      ],
      results: "Array(4)",
      search: [],
      tags: "Array(0)",
      unmatchedLangUrl: "/en/page-1/",
      url: "/en/page-1/",
    },
    src: {
      ext: ".page.js",
      path: "/pagination[1]",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="en"><head><link rel="alternate" hreflang="en" href="https://example.com/en/page-one/">
<link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/">
<link rel="alternate" hreflang="gl" href="https://example.com/paxina-un/">
<link rel="alternate" hreflang="x-default" href="https://example.com/en/page-one/">
</head><body><p>Page 1</p>
</body></html>',
    data: {
      alternates: "Array(3)",
      basename: "page-one",
      children: "<p>Page 1</p>
",
      content: "Page 1
",
      date: [],
      id: "page1",
      lang: "en",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "page-en",
      unmatchedLangUrl: "/en/page-one/",
      url: "/en/page-one/",
    },
    src: {
      ext: ".md",
      path: "/pages/page1_en",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="en"><head><link rel="alternate" hreflang="en" href="https://example.com/en/types/post/">
<link rel="alternate" hreflang="gl" href="https://example.com/types/post_gl/">
<link rel="alternate" hreflang="x-default" href="https://example.com/en/types/post/">
</head><body><p>This is the post 1</p>
</body></html>',
    data: {
      alternates: "Array(2)",
      basename: "post",
      children: "<p>This is the post 1</p>
",
      content: "This is the post 1
",
      date: [],
      id: 1,
      lang: "en",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "post 1",
      type: "post",
      unmatchedLangUrl: "/en/types/post/",
      url: "/en/types/post/",
    },
    src: {
      ext: ".md",
      path: "/types/post",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="fr"><head><link rel="alternate" hreflang="en" href="https://example.com/en/other-page-english/">
<link rel="alternate" hreflang="fr" href="https://example.com/fr/other-page-french.html">
<link rel="alternate" hreflang="x-default" href="https://example.com/en/other-page-english/">
</head><body><h1>Sous-titre français</h1>
<p>Common description</p>
<p>Other page <a href="/">Link to index in Galego</a></p>
</body></html>',
    data: {
      alternates: "Array(2)",
      basename: "other",
      children: '<h1>Sous-titre français</h1>
<p>Common description</p>
<p>Other page <a href="/">Link to index in Galego</a></p>
',
      content: \`<h1>{{ metas.subtitle }}</h1>
<p>{{ metas.description }}</p>
<p>Other page <a href="{{ '~/index.md(lang=gl)' |> url }}">Link to index in Galego</a></p>
\`,
      date: [],
      id: "other",
      lang: "fr",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      metas: [
        "subtitle",
        "description",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "Autre",
      unmatchedLangUrl: "/en/other-page-english/",
      url: "/fr/other-page-french.html",
    },
    src: {
      ext: ".vto",
      path: "/other",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="gl"><head><link rel="alternate" hreflang="en" href="https://example.com/en/">
<link rel="alternate" hreflang="gl" href="https://example.com/">
</head><body><p>Ola mundo</p>
</body></html>',
    data: {
      alternates: "Array(2)",
      basename: "",
      children: "<p>Ola mundo</p>
",
      content: "Ola mundo",
      date: [],
      id: "index",
      lang: "gl",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "Ola mundo",
      unmatchedLangUrl: "undefined",
      url: "/",
    },
    src: {
      ext: ".md",
      path: "/index",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="it"><head><link rel="alternate" hreflang="en" href="https://example.com/en/page-one/">
<link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/">
<link rel="alternate" hreflang="gl" href="https://example.com/paxina-un/">
<link rel="alternate" hreflang="x-default" href="https://example.com/en/page-one/">
</head><body><p>Pagina 1</p>
</body></html>',
    data: {
      alternates: "Array(3)",
      basename: "pagina-1",
      children: "<p>Pagina 1</p>
",
      content: "Pagina 1
",
      date: [],
      id: "page1",
      lang: "it",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "page-it",
      unmatchedLangUrl: "/en/page-one/",
      url: "/it/pagina-1/",
    },
    src: {
      ext: ".md",
      path: "/pages/page1",
      remote: undefined,
    },
  },
  {
    content: \`<!DOCTYPE html>
<html lang="it"><head><link rel="alternate" hreflang="it" href="https://example.com/it/types/article/">
<link rel="alternate" hreflang="gl" href="https://example.com/types/article_gl/">
</head><body><p>Questo è l'articolo 1</p>
</body></html>\`,
    data: {
      alternates: "Array(2)",
      basename: "article",
      children: "<p>Questo è l'articolo 1</p>
",
      content: "Questo è l'articolo 1
",
      date: [],
      id: 1,
      lang: "it",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "article 1",
      type: "article",
      unmatchedLangUrl: "undefined",
      url: "/it/types/article/",
    },
    src: {
      ext: ".md",
      path: "/types/article",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="gl"><head><link rel="alternate" hreflang="gl" href="https://example.com/lang-selector/">
</head><body><p>Select your languages...</p>
</body></html>',
    data: {
      alternates: "Array(1)",
      basename: "lang-selector",
      children: "<p>Select your languages...</p>
",
      content: "Select your languages...
",
      date: [],
      lang: "gl",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "Language Selector Page",
      unmatchedLangUrl: "undefined",
      url: "/lang-selector/",
    },
    src: {
      ext: ".md",
      path: "/lang-selector",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="gl"><head><link rel="alternate" hreflang="en" href="https://example.com/en/page-1/">
<link rel="alternate" hreflang="gl" href="https://example.com/page-1/">
<link rel="alternate" hreflang="x-default" href="https://example.com/en/page-1/">
</head><body><nav>
  <a href="/en/page-1/" hreflang="en" class="alternate"></a>
  <a href="/page-1/" hreflang="gl" class="alternate"></a>
  <a href="/en/page-1/" hreflang="x-default" class="alternate">Unmatched Language Page</a>
</nav>
  <li>Ola mundo</li>
  <li>Language Selector Page</li>
  <li>page-gl</li>
  <li>article 1</li>
  <li>post 1</li>
</body></html>',
    data: {
      alternates: "Array(2)",
      basename: "page-1",
      children: "undefined",
      content: "undefined",
      date: [],
      id: "page-1",
      lang: "gl",
      layout: "layout.vto",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      pagination: [
        "page",
        "totalPages",
        "totalResults",
        "previous",
        "next",
      ],
      results: "Array(5)",
      search: [],
      tags: "Array(0)",
      unmatchedLangUrl: "/en/page-1/",
      url: "/page-1/",
    },
    src: {
      ext: ".page.js",
      path: "/pagination[0]",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="gl"><head><link rel="alternate" hreflang="en" href="https://example.com/en/page-one/">
<link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/">
<link rel="alternate" hreflang="gl" href="https://example.com/paxina-un/">
<link rel="alternate" hreflang="x-default" href="https://example.com/en/page-one/">
</head><body><p>Páxina 1</p>
</body></html>',
    data: {
      alternates: "Array(3)",
      basename: "paxina-un",
      children: "<p>Páxina 1</p>
",
      content: "Páxina 1
",
      date: [],
      id: "page1",
      lang: "gl",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "page-gl",
      unmatchedLangUrl: "/en/page-one/",
      url: "/paxina-un/",
    },
    src: {
      ext: ".md",
      path: "/pages/page1_gl",
      remote: undefined,
    },
  },
  {
    content: "User-agent: *
Allow: /

Sitemap: https://example.com/sitemap.xml",
    data: {
      basename: "robots",
      page: [
        "src",
        "data",
      ],
      url: "/robots.txt",
    },
    src: {
      ext: "",
      path: "",
      remote: undefined,
    },
  },
  {
    content: '<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:xhtml="http://www.w3.org/1999/xhtml">
  <url>
    <loc>https://example.com/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/"/>
  </url>
  <url>
    <loc>https://example.com/en/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/"/>
  </url>
  <url>
    <loc>https://example.com/en/other-page-english/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/other-page-english/"/>
    <xhtml:link rel="alternate" hreflang="fr" href="https://example.com/fr/other-page-french.html"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/other-page-english/"/>
  </url>
  <url>
    <loc>https://example.com/en/page-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/page-1/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/page-1/"/>
  </url>
  <url>
    <loc>https://example.com/en/page-one/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-one/"/>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/paxina-un/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/page-one/"/>
  </url>
  <url>
    <loc>https://example.com/en/types/post/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/types/post/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/types/post_gl/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/types/post/"/>
  </url>
  <url>
    <loc>https://example.com/fr/other-page-french.html</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/other-page-english/"/>
    <xhtml:link rel="alternate" hreflang="fr" href="https://example.com/fr/other-page-french.html"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/other-page-english/"/>
  </url>
  <url>
    <loc>https://example.com/it/pagina-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-one/"/>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/paxina-un/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/page-one/"/>
  </url>
  <url>
    <loc>https://example.com/it/types/article/</loc>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/types/article/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/types/article_gl/"/>
  </url>
  <url>
    <loc>https://example.com/lang-selector/</loc>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/lang-selector/"/>
  </url>
  <url>
    <loc>https://example.com/page-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/page-1/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/page-1/"/>
  </url>
  <url>
    <loc>https://example.com/paxina-un/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-one/"/>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/paxina-un/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/page-one/"/>
  </url>
  <url>
    <loc>https://example.com/types/article_gl/</loc>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/types/article/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/types/article_gl/"/>
  </url>
  <url>
    <loc>https://example.com/types/post_gl/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/types/post/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/types/post_gl/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/types/post/"/>
  </url>
</urlset>',
    data: {
      basename: "sitemap",
      content: '<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:xhtml="http://www.w3.org/1999/xhtml">
  <url>
    <loc>https://example.com/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/"/>
  </url>
  <url>
    <loc>https://example.com/en/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/"/>
  </url>
  <url>
    <loc>https://example.com/en/other-page-english/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/other-page-english/"/>
    <xhtml:link rel="alternate" hreflang="fr" href="https://example.com/fr/other-page-french.html"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/other-page-english/"/>
  </url>
  <url>
    <loc>https://example.com/en/page-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/page-1/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/page-1/"/>
  </url>
  <url>
    <loc>https://example.com/en/page-one/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-one/"/>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/paxina-un/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/page-one/"/>
  </url>
  <url>
    <loc>https://example.com/en/types/post/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/types/post/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/types/post_gl/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/types/post/"/>
  </url>
  <url>
    <loc>https://example.com/fr/other-page-french.html</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/other-page-english/"/>
    <xhtml:link rel="alternate" hreflang="fr" href="https://example.com/fr/other-page-french.html"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/other-page-english/"/>
  </url>
  <url>
    <loc>https://example.com/it/pagina-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-one/"/>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/paxina-un/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/page-one/"/>
  </url>
  <url>
    <loc>https://example.com/it/types/article/</loc>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/types/article/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/types/article_gl/"/>
  </url>
  <url>
    <loc>https://example.com/lang-selector/</loc>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/lang-selector/"/>
  </url>
  <url>
    <loc>https://example.com/page-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/page-1/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/page-1/"/>
  </url>
  <url>
    <loc>https://example.com/paxina-un/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-one/"/>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/paxina-un/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/page-one/"/>
  </url>
  <url>
    <loc>https://example.com/types/article_gl/</loc>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/types/article/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/types/article_gl/"/>
  </url>
  <url>
    <loc>https://example.com/types/post_gl/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/types/post/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/types/post_gl/"/>
    <xhtml:link rel="alternate" hreflang="x-default" href="https://example.com/en/types/post/"/>
  </url>
</urlset>',
      page: [
        "src",
        "data",
      ],
      url: "/sitemap.xml",
    },
    src: {
      ext: "",
      path: "",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="gl"><head><link rel="alternate" hreflang="it" href="https://example.com/it/types/article/">
<link rel="alternate" hreflang="gl" href="https://example.com/types/article_gl/">
</head><body><p>Este é o artigo 1</p>
</body></html>',
    data: {
      alternates: "Array(2)",
      basename: "article_gl",
      children: "<p>Este é o artigo 1</p>
",
      content: "Este é o artigo 1
",
      date: [],
      id: 1,
      lang: "gl",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "article 1",
      type: "article",
      unmatchedLangUrl: "undefined",
      url: "/types/article_gl/",
    },
    src: {
      ext: ".md",
      path: "/types/article_gl",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="gl"><head><link rel="alternate" hreflang="en" href="https://example.com/en/types/post/">
<link rel="alternate" hreflang="gl" href="https://example.com/types/post_gl/">
<link rel="alternate" hreflang="x-default" href="https://example.com/en/types/post/">
</head><body><p>Este é o post 1</p>
</body></html>',
    data: {
      alternates: "Array(2)",
      basename: "post_gl",
      children: "<p>Este é o post 1</p>
",
      content: "Este é o post 1
",
      date: [],
      id: 1,
      lang: "gl",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "post 1",
      type: "post",
      unmatchedLangUrl: "/en/types/post/",
      url: "/types/post_gl/",
    },
    src: {
      ext: ".md",
      path: "/types/post_gl",
      remote: undefined,
    },
  },
]
`;

snapshot[`Sitemap plugin with filter_pages plugin 1`] = `
{
  formats: [
    {
      engines: 0,
      ext: ".page.toml",
      isPage: true,
      loader: [AsyncFunction: toml],
    },
    {
      engines: 1,
      ext: ".page.ts",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".page.js",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      engines: 0,
      ext: ".page.json",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".vto",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
  ],
  src: [
    "/",
    "/404.md",
    "/_data.yml",
    "/favicon.png",
    "/images",
    "/images/avatar.jpg",
    "/page5.yaml",
    "/pages",
    "/pages/2020-06-21_page2.page.json",
    "/pages/2021-01-02-18-32_page4.page.ts",
    "/pages/_data",
    "/pages/_data.yml",
    "/pages/_data/colors.yml",
    "/pages/_data/documents.ts",
    "/pages/_data/drinks.js",
    "/pages/_data/names.json",
    "/pages/ghost",
    "/pages/ghost/2021-12-29-page6.md",
    "/pages/ghost/_data.yml",
    "/pages/page1.md",
    "/pages/page3.page.js",
    "/pages/subpage",
    "/pages/subpage/_data.yml",
    "/pages/subpage/page7.page.js",
    "/static.yml",
    "/styles.css",
  ],
}
`;

snapshot[`Sitemap plugin with filter_pages plugin 2`] = `[]`;

snapshot[`Sitemap plugin with filter_pages plugin 3`] = `
[
  {
    content: "<p>This page is exported to <code>/404.html</code>, not <code>/404/index.html</code></p>
",
    data: {
      basename: "404",
      children: "<p>This page is exported to <code>/404.html</code>, not <code>/404/index.html</code></p>
",
      content: "This page is exported to \`/404.html\`, not \`/404/index.html\`
",
      date: [],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Default site name",
      tags: "Array(0)",
      url: "/404.html",
    },
    src: {
      ext: ".md",
      path: "/404",
      remote: undefined,
    },
  },
  {
    content: "Content of Page 2",
    data: {
      basename: "overrided-page2",
      children: "Content of Page 2",
      colors: "Array(3)",
      content: "Content of Page 2",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
        "image",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Folder overrided site name",
      tags: "Array(1)",
      title: "Page 2",
      url: "/overrided-page2/",
    },
    src: {
      ext: ".page.json",
      path: "/pages/2020-06-21_page2",
      remote: undefined,
    },
  },
  {
    content: "Content of Page 3",
    data: {
      basename: "page_3",
      children: "Content of Page 3",
      colors: "Array(3)",
      content: "Content of Page 3",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Folder overrided site name",
      tags: "Array(1)",
      title: "Page 3",
      url: "/page_3/",
    },
    src: {
      ext: ".page.js",
      path: "/pages/page3",
      remote: undefined,
    },
  },
  {
    content: "Content of Page 5",
    data: {
      basename: "page5",
      children: "Content of Page 5",
      content: "Content of Page 5",
      date: [],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Default site name",
      tags: "Array(0)",
      title: "Page 5",
      url: "/page5/",
    },
    src: {
      ext: ".yaml",
      path: "/page5",
      remote: undefined,
    },
  },
  {
    content: "Content of Page 4 in Overrided site name, from the file /pages/2021-01-02-18-32_page4.page.ts",
    data: {
      basename: "2021-01-02-18-32_page4",
      children: "Content of Page 4 in Overrided site name, from the file /pages/2021-01-02-18-32_page4.page.ts",
      colors: "Array(3)",
      content: "default",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Overrided site name",
      tags: "Array(1)",
      title: "Page 4",
      url: "/pages/2021-01-02-18-32_page4/",
    },
    src: {
      ext: ".page.ts",
      path: "/pages/2021-01-02-18-32_page4",
      remote: undefined,
    },
  },
  {
    content: "<p>Content of Page 6</p>
",
    data: {
      basename: "2021-12-29-page6",
      children: "<p>Content of Page 6</p>
",
      colors: "Array(3)",
      content: "Content of Page 6
",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Folder overrided site name",
      tags: "Array(2)",
      title: "Page 6",
      url: "/pages/2021-12-29-page6/",
    },
    src: {
      ext: ".md",
      path: "/pages/ghost/2021-12-29-page6",
      remote: undefined,
    },
  },
  {
    content: "User-agent: *
Allow: /

Sitemap: https://example.com/sitemap.xml",
    data: {
      basename: "robots",
      page: [
        "src",
        "data",
      ],
      url: "/robots.txt",
    },
    src: {
      ext: "",
      path: "",
      remote: undefined,
    },
  },
  {
    content: '<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:xhtml="http://www.w3.org/1999/xhtml">
  <url>
    <loc>https://example.com/overrided-page2/</loc>
    <lastmod>2024-08-06T19:00:04.255Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/page5/</loc>
    <lastmod>1979-06-21T23:45:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/page_3/</loc>
    <lastmod>2020-01-01T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/2021-01-02-18-32_page4/</loc>
    <lastmod>2024-08-06T19:00:04.256Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/2021-12-29-page6/</loc>
    <lastmod>2022-01-01T00:00:00.000Z</lastmod>
  </url>
</urlset>',
    data: {
      basename: "sitemap",
      content: '<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:xhtml="http://www.w3.org/1999/xhtml">
  <url>
    <loc>https://example.com/overrided-page2/</loc>
    <lastmod>2024-08-06T19:00:04.255Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/page5/</loc>
    <lastmod>1979-06-21T23:45:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/page_3/</loc>
    <lastmod>2020-01-01T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/2021-01-02-18-32_page4/</loc>
    <lastmod>2024-08-06T19:00:04.256Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/2021-12-29-page6/</loc>
    <lastmod>2022-01-01T00:00:00.000Z</lastmod>
  </url>
</urlset>',
      page: [
        "src",
        "data",
      ],
      url: "/sitemap.xml",
    },
    src: {
      ext: "",
      path: "",
      remote: undefined,
    },
  },
]
`;

snapshot[`Sitemap plugin with redirects plugin 1`] = `
{
  formats: [
    {
      engines: 0,
      ext: ".page.toml",
      isPage: true,
      loader: [AsyncFunction: toml],
    },
    {
      engines: 1,
      ext: ".page.ts",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".page.js",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      engines: 0,
      ext: ".page.json",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".vto",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
  ],
  src: [
    "/",
    "/page1.vto",
    "/page2.vto",
  ],
}
`;

snapshot[`Sitemap plugin with redirects plugin 2`] = `[]`;

snapshot[`Sitemap plugin with redirects plugin 3`] = `
[
  {
    content: '<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <title>Redirecting…</title>
  <meta http-equiv="refresh" content="0; url=/page1/">
</head>
<body>
  <h1>Redirecting…</h1>
  <a href="/page1/">Click here if you are not redirected.</a>
</body>
</html>',
    data: {
      basename: "old-page1",
      content: '<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <title>Redirecting…</title>
  <meta http-equiv="refresh" content="0; url=/page1/">
</head>
<body>
  <h1>Redirecting…</h1>
  <a href="/page1/">Click here if you are not redirected.</a>
</body>
</html>',
      isRedirect: true,
      page: [
        "src",
        "data",
      ],
      url: "/old-page1/",
    },
    src: {
      ext: "",
      path: "",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <title>Redirecting…</title>
  <meta http-equiv="refresh" content="0; url=/page2/">
</head>
<body>
  <h1>Redirecting…</h1>
  <a href="/page2/">Click here if you are not redirected.</a>
</body>
</html>',
    data: {
      basename: "old-page2",
      content: '<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <title>Redirecting…</title>
  <meta http-equiv="refresh" content="0; url=/page2/">
</head>
<body>
  <h1>Redirecting…</h1>
  <a href="/page2/">Click here if you are not redirected.</a>
</body>
</html>',
      isRedirect: true,
      page: [
        "src",
        "data",
      ],
      url: "/old-page2/",
    },
    src: {
      ext: "",
      path: "",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <title>Redirecting…</title>
  <meta http-equiv="refresh" content="1; url=/page2/">
</head>
<body>
  <h1>Redirecting…</h1>
  <a href="/page2/">Click here if you are not redirected.</a>
</body>
</html>',
    data: {
      basename: "other-old-page2",
      content: '<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <title>Redirecting…</title>
  <meta http-equiv="refresh" content="1; url=/page2/">
</head>
<body>
  <h1>Redirecting…</h1>
  <a href="/page2/">Click here if you are not redirected.</a>
</body>
</html>',
      isRedirect: true,
      page: [
        "src",
        "data",
      ],
      url: "/other-old-page2/",
    },
    src: {
      ext: "",
      path: "",
      remote: undefined,
    },
  },
  {
    content: "Page 1",
    data: {
      basename: "page1",
      children: "Page 1",
      content: "Page 1",
      date: [],
      mergedKeys: [
        "tags",
      ],
      oldUrl: "/old-page1/",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/page1/",
    },
    src: {
      ext: ".vto",
      path: "/page1",
      remote: undefined,
    },
  },
  {
    content: "Page 2
",
    data: {
      basename: "page2",
      children: "Page 2
",
      content: "Page 2
",
      date: [],
      mergedKeys: [
        "tags",
      ],
      oldUrl: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/page2/",
    },
    src: {
      ext: ".vto",
      path: "/page2",
      remote: undefined,
    },
  },
  {
    content: "User-agent: *
Allow: /

Sitemap: https://example.com/sitemap.xml",
    data: {
      basename: "robots",
      page: [
        "src",
        "data",
      ],
      url: "/robots.txt",
    },
    src: {
      ext: "",
      path: "",
      remote: undefined,
    },
  },
  {
    content: '<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:xhtml="http://www.w3.org/1999/xhtml">
  <url>
    <loc>https://example.com/page1/</loc>
    <lastmod>2025-02-04T20:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/page2/</loc>
    <lastmod>2025-02-04T20:00:00.000Z</lastmod>
  </url>
</urlset>',
    data: {
      basename: "sitemap",
      content: '<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:xhtml="http://www.w3.org/1999/xhtml">
  <url>
    <loc>https://example.com/page1/</loc>
    <lastmod>2025-02-04T20:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/page2/</loc>
    <lastmod>2025-02-04T20:00:00.000Z</lastmod>
  </url>
</urlset>',
      page: [
        "src",
        "data",
      ],
      url: "/sitemap.xml",
    },
    src: {
      ext: "",
      path: "",
      remote: undefined,
    },
  },
]
`;
